--- a/gestor/src/main/resources/static/index.html
+++ b/gestor/src/main/resources/static/index.html
@@ -11,6 +11,6 @@
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
 <body>
   <app-root></app-root>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="runtime.fcc45d9409e4bdb4.js" type="module"></script><script src="polyfills.ec706352241d5ba0.js" type="module"></script><script src="main.90a366e0b8789c08.js" type="module"></script></body>
 </html>
